Assertion failure: aRequest->mModuleScript->HasParseError(), at /builds/worker/checkouts/gecko/js/loader/ModuleLoaderBase.cpp:880
Categories
(Core :: JavaScript Engine, defect, P1)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr140 | --- | unaffected |
| firefox143 | --- | unaffected |
| firefox144 | --- | unaffected |
| firefox145 | --- | fixed |
People
(Reporter: tsmith, Assigned: allstars.chh)
References
(Blocks 2 open bugs, Regression, )
Details
(Keywords: assertion, pernosco, regression)
Attachments
(1 file)
Found with m-c 20251004-9220eca86af4 (--enable-debug)
This was found by visiting a live website with a debug build.
STR:
- Launch browser and visit site
This issue was triggered by visiting http://www.medinabet.com/.
Assertion failure: aRequest->mModuleScript->HasParseError(), at /builds/worker/checkouts/gecko/js/loader/ModuleLoaderBase.cpp:880
0|0|libxul.so|JS::loader::ModuleLoaderBase::OnFetchFailed(JS::loader::ModuleLoadRequest*)|hg:hg.mozilla.org/mozilla-central:js/loader/ModuleLoaderBase.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|880|0x6ac
0|1|libxul.so|JS::loader::ModuleLoaderBase::WaitForModuleFetch(JS::loader::ModuleLoadRequest*)|hg:hg.mozilla.org/mozilla-central:js/loader/ModuleLoaderBase.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|722|0x17c
0|2|libxul.so|JS::loader::ModuleLoaderBase::StartOrRestartModuleLoad(JS::loader::ModuleLoadRequest*, JS::loader::ModuleLoaderBase::RestartRequest)|hg:hg.mozilla.org/mozilla-central:js/loader/ModuleLoaderBase.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|578|0x2a8
0|3|libxul.so|JS::loader::ModuleLoaderBase::HostLoadImportedModule(JSContext*, JS::Handle<JSScript*>, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::Handle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/loader/ModuleLoaderBase.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|272|0x8f7
0|4|libxul.so|js::HostLoadImportedModule(JSContext*, JS::Handle<JSScript*>, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::Handle<JS::Value>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Modules.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|826|0x5e
0|5|libxul.so|InnerModuleLoading(JSContext*, JS::Handle<js::GraphLoadingStateRecordObject*>, JS::Handle<js::ModuleObject*>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Modules.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1563|0x720
0|6|libxul.so|js::LoadRequestedModules(JSContext*, JS::Handle<js::ModuleObject*>, JS::Handle<JS::Value>, JS::MutableHandle<JSObject*>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Modules.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1697|0x113
0|7|libxul.so|JS::LoadRequestedModules(JSContext*, JS::Handle<JSObject*>, JS::Handle<JS::Value>, JS::MutableHandle<JSObject*>)|hg:hg.mozilla.org/mozilla-central:js/src/vm/Modules.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|372|0xfb
0|8|libxul.so|JS::loader::ModuleLoaderBase::StartFetchingModuleDependencies(JS::loader::ModuleLoadRequest*)|hg:hg.mozilla.org/mozilla-central:js/loader/ModuleLoaderBase.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1268|0x47f
0|9|libxul.so|JS::loader::ModuleLoaderBase::OnFetchComplete(JS::loader::ModuleLoadRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:js/loader/ModuleLoaderBase.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|774|0x130
0|10|libxul.so|mozilla::dom::ScriptLoader::PrepareLoadedRequest(JS::loader::ScriptLoadRequest*, nsIIncrementalStreamLoader*, nsresult)|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|4587|0x98f
0|11|libxul.so|mozilla::dom::ScriptLoader::OnStreamComplete(nsIIncrementalStreamLoader*, JS::loader::ScriptLoadRequest*, nsresult, nsresult, mozilla::dom::SRICheckDataVerifier*)|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoader.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|4051|0x7a
0|12|libxul.so|mozilla::dom::ScriptLoadHandler::OnStreamComplete(nsIIncrementalStreamLoader*, nsISupports*, nsresult, unsigned int, unsigned char const*)|hg:hg.mozilla.org/mozilla-central:dom/script/ScriptLoadHandler.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|478|0x6f6
0|13|libxul.so|nsIncrementalStreamLoader::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/base/nsIncrementalStreamLoader.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|87|0xec
0|14|libxul.so|nsCORSListenerProxy::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/protocol/http/nsCORSListenerProxy.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|835|0x86
0|15|libxul.so|mozilla::net::nsHTTPCompressConv::OnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/streamconv/converters/nsHTTPCompressConv.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|299|0x242
0|16|libxul.so|mozilla::net::HttpChannelChild::DoOnStopRequest(nsIRequest*, nsresult)|hg:hg.mozilla.org/mozilla-central:netwerk/protocol/http/HttpChannelChild.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1273|0x27b
0|17|libxul.so|mozilla::net::HttpChannelChild::OnStopRequest(nsresult const&, mozilla::net::ResourceTimingStructArgs const&, mozilla::net::nsHttpHeaderArray const&)|hg:hg.mozilla.org/mozilla-central:netwerk/protocol/http/HttpChannelChild.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1087|0x921
0|18|libxul.so|std::_Function_handler<void (), mozilla::net::HttpChannelChild::ProcessOnStopRequest(nsresult const&, mozilla::net::ResourceTimingStructArgs const&, mozilla::net::nsHttpHeaderArray const&, nsTArray<mozilla::net::ConsoleReportCollected>&&, bool, mozilla::TimeStamp const&)::$_2>::_M_invoke(std::_Any_data const&)|/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/10/bits/std_function.h|291|0x7a
0|19|libxul.so|mozilla::net::ChannelEventQueue::FlushQueue()|hg:hg.mozilla.org/mozilla-central:netwerk/ipc/ChannelEventQueue.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|85|0x28b
0|20|libxul.so|mozilla::net::ChannelEventQueue::ResumeInternal()::CompleteResumeRunnable::Run()|hg:hg.mozilla.org/mozilla-central:netwerk/ipc/ChannelEventQueue.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|144|0x60
0|21|libxul.so|mozilla::RunnableTask::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/TaskController.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|705|0x17
0|22|libxul.so|mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/TaskController.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1325|0x597
0|23|libxul.so|mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/TaskController.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1148|0x57
0|24|libxul.so|mozilla::TaskController::ProcessPendingMTTask(bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/TaskController.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|641|0x65
0|25|libxul.so|mozilla::detail::RunnableFunction<mozilla::TaskController::TaskController()::$_0>::Run()|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.h:9220eca86af431fe7890a6100e7c352d2cc30d76|549|0x16
0|26|libxul.so|nsThread::ProcessNextEvent(bool, bool*)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThread.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|1157|0x5aa
0|27|libxul.so|NS_ProcessNextEvent(nsIThread*, bool)|hg:hg.mozilla.org/mozilla-central:xpcom/threads/nsThreadUtils.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|462|0x4f
0|28|libxul.so|mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|85|0xc0
0|29|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:9220eca86af431fe7890a6100e7c352d2cc30d76|343|0x61
0|30|libxul.so|nsBaseAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/nsBaseAppShell.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|148|0x28
0|31|libxul.so|nsAppShell::Run()|hg:hg.mozilla.org/mozilla-central:widget/gtk/nsAppShell.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|471|0x114
0|32|libxul.so|XRE_RunAppShell()|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|657|0x6b
0|33|libxul.so|mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*)|hg:hg.mozilla.org/mozilla-central:ipc/glue/MessagePump.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|235|0x3c
0|34|libxul.so|MessageLoop::Run()|hg:hg.mozilla.org/mozilla-central:ipc/chromium/src/base/message_loop.cc:9220eca86af431fe7890a6100e7c352d2cc30d76|343|0x61
0|35|libxul.so|XRE_InitChildProcess(int, char**, XREChildData const*)|hg:hg.mozilla.org/mozilla-central:toolkit/xre/nsEmbedFunctions.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|595|0xa11
0|36|firefox-bin|main|hg:hg.mozilla.org/mozilla-central:browser/app/nsBrowserApp.cpp:9220eca86af431fe7890a6100e7c352d2cc30d76|420|0x21c
| Reporter | ||
Comment 1•9 months ago
|
||
A Pernosco session is available here: https://pernos.co/debug/E1uBzOuK3WNznwB0bY1B6A/index.html
| Assignee | ||
Updated•9 months ago
|
| Assignee | ||
Comment 2•9 months ago
|
||
The module script was successfully imported, But it has an error to rethrow
from its submodules.
However, the HTML spec doesn't check the error to rethrow during
HostLoadImportedModule - A spec issue has been filed to address that.
https://github.com/whatwg/html/issues/11755
Updated•9 months ago
|
Updated•9 months ago
|
Comment 4•9 months ago
|
||
Set release status flags based on info from the regressing bug 1968890
Comment 5•9 months ago
|
||
| bugherder | ||
Updated•9 months ago
|
Description
•